--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </ul>
 
                     <div class="legal">
-                        &copy; 2018 by trillo. All right reserved.
+                        &copy; 2019 All right reserved.
                     </div>
                 </nav>
                 <main class="dashboard-view">
