--- a/create-exam-center.html
+++ b/create-exam-center.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="side-nav__item">
-                        <a href="#" class="side-nav__link">
+                        <a href="create-exam-center.html" class="side-nav__link">
                             <svg class="side-nav__icon">
                                 <use xlink:href="img/sprite.svg#icon-location"></use>
                             </svg>
@@ -76,7 +76,7 @@
                 </ul>
 
                 <div class="legal">
-                    &copy; 2018 by trillo. All right reserved.
+                    &copy; 2019 All right reserved.
                 </div>
             </nav>
             <main class="dashboard-view">
