--- a/create-user.html
+++ b/create-user.html
@@ -32,6 +32,7 @@
         </header>
         <div class="content">
             <nav class="sidebar">
+                
                 <ul class="side-nav">
                     <li class="side-nav__item side-nav__item--active">
                         <a href="index.html" class="side-nav__link">
@@ -113,6 +114,24 @@
                                     <div class="input-field col s12">
                                         <input id="city" type="text" class="validate">
                                         <label for="city">City</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input id="username" type="text" class="validate">
+                                        <label for="username">User Name</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input id="password" type="password" class="validate">
+                                        <label for="password">Password</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input id="cnf-password" type="password" class="validate">
+                                        <label for="cnf-password">Confirm Password</label>
                                     </div>
                                 </div>
                                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit
